--- a/src/app/drawing-space/drawing-space.component.css
+++ b/src/app/drawing-space/drawing-space.component.css
@@ -1,21 +1,24 @@
+html *,
+html *::before,
+html *::after {
+  box-sizing: inherit;
+}
+
 .sheet{
-  /*width: 200px;*/
-  height: 100%;
-  /*min-width: 30%;*/
-  /*min-height: 30%;*/
-  /*max-width: 70%;*/
-  /*max-height: 100%;*/
-  background-color: #FFF;
+/*width: 200px;*/
+height: 100%;
+/*min-width: 30%;*/
+/*min-height: 30%;*/
+/*max-width: 70%;*/
+/*max-height: 100%;*/
+background-color: #FFF;
   resize: vertical;
   box-sizing: border-box;
   display: inline-block;
 }
 
-
-html *,
-html *::before,
-html *::after {
-  box-sizing: inherit;
+#container{
+  cursor: crosshair;
 }
 
 .white_board--controls > button {
