--- a/src/app/drawing-space/drawing-space.component.css
+++ b/src/app/drawing-space/drawing-space.component.css
@@ -51,7 +51,8 @@ svg{
   height: 2em;
 }
 
-button:hover{
+button:hover,
+.right button.active{
   box-shadow:
     inset 0 0 50px #fff,
     inset 20px 0 80px #f0f,
@@ -63,6 +64,7 @@ button:hover{
     10px 0 80px #0ff !important;
   transform: translate3d(0, -.6em , 0);
 }
+
 button.noAnimate:hover{
   box-shadow: none !important;
   transform: translate3d(0, -.2em , 0);
