--- a/src/app/drawing-space/drawing-space.component.html
+++ b/src/app/drawing-space/drawing-space.component.html
@@ -21,24 +21,21 @@
       </svg>
     </button>
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
-            (click)='undo()' matTooltip="Undo" matTooltipPosition="right" aria-label="Brush">
+    <button mat-mini-fab (click)='undo()' matTooltip="Undo" matTooltipPosition="right" aria-label="Brush">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate rotate" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
         <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
       </svg>
     </button>
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
-            (click)='redo()' matTooltip="Redo" matTooltipPosition="right" aria-label="Brush">
+    <button mat-mini-fab (click)='redo()' matTooltip="Redo" matTooltipPosition="right" aria-label="Brush">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate R" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
         <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
       </svg>
     </button>
 
-    <button mat-mini-fab
-            (click)='recolor()' matTooltip="Recolor" matTooltipPosition="right" aria-label="Eraser">
+    <button mat-mini-fab (click)='recolor()' matTooltip="Recolor" matTooltipPosition="right" aria-label="Eraser">
       <svg class="animate R" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <g class="ColorScheme-Text" fill="currentColor">
         <path d="m11 2v2h-6a3 3 0 0 0 -3 3v1h1v-1a2 2 0 0 1 2-2h6v2l3.33398438-2.5z"></path>
@@ -47,25 +44,21 @@
     </svg>
     </button>
 
-    <button mat-mini-fab
-          matTooltip="Clone" matTooltipPosition="right" aria-label="Clone"
-          (click)="clone()">
+    <button mat-mini-fab matTooltip="Clone" matTooltipPosition="right" aria-label="Clone" (click)="clone()">
       <svg class="animate stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="9" y="9" width="13" height="13" rx="2" stroke-linecap="round" stroke-linejoin="round"></rect>
         <path d="M5 15H4C2.89543 15 2 14.1046 2 13V4C2 2.89543 2.89543 2 4 2H13C14.1046 2 15 2.89543 15 4V5" stroke-linecap="round" stroke-linejoin="round"></path>
       </svg>
     </button>
-    <button mat-mini-fab
-          matTooltip="Clone" matTooltipPosition="right" aria-label="Clone"
-          (click)="save()">
+
+    <button mat-mini-fab matTooltip="Clone" matTooltipPosition="right" aria-label="Clone" (click)="save()">
       <svg class="animate stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="9" y="9" width="13" height="13" rx="2" stroke-linecap="round" stroke-linejoin="round"></rect>
         <path d="M5 15H4C2.89543 15 2 14.1046 2 13V4C2 2.89543 2.89543 2 4 2H13C14.1046 2 15 2.89543 15 4V5" stroke-linecap="round" stroke-linejoin="round"></path>
       </svg>
     </button>
-    <button mat-mini-fab
-          matTooltip="Clone" matTooltipPosition="right" aria-label="Clone"
-          (click)="load()">
+
+    <button mat-mini-fab matTooltip="Clone" matTooltipPosition="right" aria-label="Clone" (click)="load()">
       <svg class="animate stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="9" y="9" width="13" height="13" rx="2" stroke-linecap="round" stroke-linejoin="round"></rect>
         <path d="M5 15H4C2.89543 15 2 14.1046 2 13V4C2 2.89543 2.89543 2 4 2H13C14.1046 2 15 2.89543 15 4V5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -76,7 +69,7 @@
 
   <div id="control_container_R" class="white_board--controls right mat-elevation-z8">
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "active" : ""'
             (click)='setSelection("brush")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
       <svg class="icon" width="289.6875" height="309.375" viewBox="0 0 289.6875 309.375">
         <path style="fill:#000000"
@@ -136,35 +129,35 @@
 
     <hr class="hr_divider" />
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+    <button mat-mini-fab [ngClass]='selectedButton["circle"] ? "active":""'
             (click)='createShape("circle")' matTooltip="Circle" matTooltipPosition="right" aria-label="Circle">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate stroke" viewBox="0 0 16 16">
         <circle cx="8" cy="8" r="7"/>
       </svg>
     </button>
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+    <button mat-mini-fab [ngClass]='selectedButton["square"] ? "active":""'
             (click)='createShape("square")' matTooltip="Square" matTooltipPosition="right" aria-label="Rectangle">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate stroke" viewBox="0 0 16 16">
         <rect x="2" y="3" width="12" height="12" rx="1" />
       </svg>
     </button>
 
-    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+    <button mat-mini-fab [ngClass]='selectedButton["rect"] ? "active":""'
             (click)='createShape("rect")' matTooltip="Rectangle" matTooltipPosition="right" aria-label="Rectangle">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate stroke" viewBox="0 0 17 17">
         <rect x="0" y="3" width="18" height="12" rx="1" />
       </svg>
     </button>
 
-    <button mat-mini-fab
+    <button mat-mini-fab [ngClass]='selectedButton["triangle"] ? "active":""'
             (click)='createShape("triangle")' matTooltip="Triangle" matTooltipPosition="right" aria-label="Triangle">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate stroke" viewBox="0 0 16 16">
         <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
       </svg>
     </button>
 
-    <button mat-mini-fab
+    <button mat-mini-fab [ngClass]='selectedButton["ellipse"] ? "active":""'
             (click)='createShape("ellipse")' matTooltip="Ellipse" matTooltipPosition="right" aria-label="Ellipse">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="animate stroke" viewBox="0 0 16 16">
         <ellipse cx="8" cy="8" rx="10" ry="7"/>
@@ -172,6 +165,7 @@
     </button>
 
     <button [matMenuTriggerFor]="menuEr" mat-mini-fab (click)='setSelection("eraser")'
+            [ngClass]='selectedButton["eraser"] ? "active":""'
             matTooltip="Eraser" matTooltipPosition="right" aria-label="Eraser">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
            class="animate stroke" viewBox="0 0 16 16">
@@ -196,5 +190,5 @@
     </mat-menu>
   </div>
 
-  <div id="container" [ngClass]="getCursorClass()"></div>
+  <div id="container"></div>
 </section>
