--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,16 +6,14 @@
         <div class="burger"></div>
       </div>
     </label>
-    <svg [matMenuTriggerFor]="menu" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+    <svg [matMenuTriggerFor]="menuSave" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
          class="button press" viewBox="0 0 23 27"
          mat-mini-fab matTooltip="Save File" matTooltipPosition="below">
       <path d="M18,9h-2c-0.6,0-1,0.4-1,1s0.4,1,1,1h2c0.6,0,1,0.4,1,1v7c0,0.6-0.4,1-1,1H6c-0.6,0-1-0.4-1-1v-7c0-0.6,0.4-1,1-1h2c0.6,0,1-0.4,1-1S8.6,9,8,9H6c-1.7,0-3,1.3-3,3v7c0,1.7,1.3,3,3,3h12c1.7,0,3-1.3,3-3v-7C21,10.3,19.7,9,18,9z M8.3,14.7l3,3c0.2,0.2,0.4,0.3,0.7,0.3c0.3,0,0.5-0.1,0.7-0.3l3-3c0.4-0.4,0.4-1,0-1.4c-0.4-0.4-1-0.4-1.4,0L13,14.6V3c0-0.6-0.4-1-1-1s-1,0.4-1,1v11.6l-1.3-1.3c-0.4-0.4-1-0.4-1.4,0C7.9,13.7,7.9,14.3,8.3,14.7z"></path>
     </svg>
-<!--    <input type="file" class="file-upload" onchange="console.log(event.target.files)">-->
-    <svg (click)="load()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+    <svg [matMenuTriggerFor]="menuLoad" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
          class="button press" viewBox="0 0 23 27"
          mat-mini-fab matTooltip="Upload File" matTooltipPosition="below">
-
       <path d="M18,9h-2c-0.6,0-1,0.4-1,1s0.4,1,1,1h2c0.6,0,1,0.4,1,1v7c0,0.6-0.4,1-1,1H6c-0.6,0-1-0.4-1-1v-7c0-0.6,0.4-1,1-1h2c0.6,0,1-0.4,1-1S8.6,9,8,9H6c-1.7,0-3,1.3-3,3v7c0,1.7,1.3,3,3,3h12c1.7,0,3-1.3,3-3v-7C21,10.3,19.7,9,18,9z M9.7,6.7L11,5.4V17c0,0.6,0.4,1,1,1h0c0.6,0,1-0.4,1-1V5.4l1.3,1.3C14.5,6.9,14.7,7,15,7c0.3,0,0.5-0.1,0.7-0.3c0.4-0.4,0.4-1,0-1.4l-3-3c0,0,0,0,0,0c-0.4-0.4-1-0.4-1.4,0l-3,3c-0.4,0.4-0.4,1,0,1.4C8.7,7.1,9.3,7.1,9.7,6.7z"></path>
       </svg>
     <svg (click)="saveAsImage()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -29,9 +27,14 @@
       <path d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"></path>
     </svg>
 
-    <mat-menu #menu="matMenu" mat-mini-fab matTooltipPosition="below">
+    <mat-menu #menuSave="matMenu" mat-mini-fab matTooltipPosition="below">
       <a mat-menu-item (click)="saveXML()">Save as XML</a>
       <a mat-menu-item (click)="saveJSON()">Save as JSon</a>
+    </mat-menu>
+
+    <mat-menu #menuLoad="matMenu" mat-mini-fab matTooltipPosition="below">
+      <a mat-menu-item (click)="saveXML()">Load as XML</a>
+      <a mat-menu-item (click)="saveJSON()">Load as JSon</a>
     </mat-menu>
 
   </div>
