--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -57,22 +57,22 @@
 
 .gooey-menu .button:nth-child(3) {
   z-index:3;
-  transition: all 0.6s ease 0.2s;
+  transition: all 0.5s ease;
   /*-webkit-transition: all 0.6s, border-color 0.3s;*/
 }
 .gooey-menu .button:nth-child(4) {
   z-index:2;
-  transition: all 0.6s ease 0.2s;
+  transition: all 0.5s ease;
   /*-webkit-transition: all 1.2s, border-color 0.3s;*/
 }
 .gooey-menu .button:nth-child(5) {
   z-index:1;
-  transition: all 0.6s ease 0.4s;
+  transition: all 0.5s ease 0.3s;
   /*-webkit-transition: all 1.8s, border-color 0.3s;*/
 }
 .gooey-menu .button:nth-child(6) {
   z-index:1;
-  transition: all 0.6s ease 0.4s;
+  transition: all 0.5s ease 0.3s;
   /*-webkit-transition: all 1.8s, border-color 0.3s;*/
 }
 
